force-app/main/default/objects/Division__c/fields/Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Customer_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Id</label>
    <referenceTo>IM_Customer_Account__c</referenceTo>
    <relationshipLabel>Divisions (Customer Id)</relationshipLabel>
    <relationshipName>Divisions</relationshipName>
    <type>Lookup</type>
</CustomField>