force-app/main/default/objects/Division__c/fields/Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Division_Name__c</fullName>
    <label>Division Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>