force-app/main/default/objects/Division__c/fields/Division_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Division_Unique_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Division Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>