force-app/main/default/objects/Division__c/fields/IM_Inventory_System_Number__c.field-meta.xml
<CustomField>
    <fullName>IM_Inventory_System_Number__c</fullName>
    <label>Inventory System Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>