force-app/main/default/objects/Division__c/fields/Owning_District_Id__c.field-meta.xml
<CustomField>
    <fullName>Owning_District_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owning District Id</label>
    <referenceTo>Market__c</referenceTo>
    <relationshipName>Divisions</relationshipName>
    <type>Lookup</type>
</CustomField>