force-app/main/default/objects/Division__c/listViews/All_Divisions_RC.listView-meta.xml
<ListView>
    <fullName>All_Divisions_RC</fullName>
    <columns>NAME</columns>
    <columns>DIVISION</columns>
    <columns>Customer_Id__c</columns>
    <columns>Division_Code__c</columns>
    <columns>Division_Name__c</columns>
    <columns>Division_Unique_Id__c</columns>
    <columns>Owning_District_Id__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <division>*</division>
    <filterScope>Everything</filterScope>
    <label>All Divisions RC</label>
    <language>en_US</language>
</ListView>